Added a readme and some more files

--- a/common/.abcde.conf
+++ b/common/.abcde.conf
@@ -10,7 +10,7 @@ ACTIONS=cddb,read,encode,tag,move,clean
 
 # Output dir
 # OUTPUTDIR='/run/media/angelic_sedition/Windows7/Users/Admin/Music/Winamp'
-OUTPUTDIR='~/Music'
+OUTPUTDIR='/home/angelic_sedition/Music'
 
 # temp dir 
 WAVOUTPUTDIR='/tmp'
