--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -185,7 +185,6 @@ bind z command-prompt 'ls' \; run 'xsendkey Enter' \; command-prompt 'kill-sessi
 # fast session switching; type in name of session
 bind S command-prompt "switch -t %1"
 
-
 #select panes; changed for colemak (n normally moves to next window; i shows info already in status bar)
 bind h select-pane -L
 bind n select-pane -D
@@ -218,7 +217,7 @@ bind-key -r H resize-pane -L 5
 bind-key -r I resize-pane -R 5
 
 # better pane split bindings
-bind-key \ split-window -h		# vertical split
+bind-key / split-window -h		# vertical split
 bind-key - split-window -v		# horizontal split
 
 #Maximize current terminal; bound to }
