added a lot of new files and integrated window management bindings into the normal mode of all frequently used programs

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -93,9 +93,9 @@ set-option -g status-right-length 90
 # position the status bar at top of screen:
 # set-option -g status-position top    
 
-# visual notification of activity in other windows (no idea what this does)
-setw -g monitor-activity on
-set -g visual-activity on
+# visual notification of activity in other windows (just gives useless messages if on?)
+setw -g monitor-activity off
+set -g visual-activity off
 
 # Time messages remain in the status bar. Lower this number
 # if this is too distracting. (I lowerered from 4k)
@@ -172,18 +172,24 @@ bind-key x kill-pane
 #========== Keybindings {{{
 # for colemak and other remaps as always
 
-# session creation and killing 
+# session# {{{
+# $ is rename
+# name new session
 bind _ command-prompt "new -s %1" 
+# kill by name
 bind @ command-prompt "kill-session -t %1"
+# show sessions and choose to kill at same time
+# bind z command-prompt 'ls' \; run 'xdotool key Enter' \; command-prompt 'kill-session -t %1' 
+bind z run 'tmux ls' \; command-prompt 'kill-session -t %1' 
+# D to choose and enter
+# session switching; type in name of session
+bind S run 'tmux ls' \; command-prompt "switch -t %1"
+
+# }}}
 
 # link hinting by faking termite keybind
 bind f run "xdotool key -window Termite control+shift+x"
 
-# show sessions and choose to kill at same time
-bind z command-prompt 'ls' \; run 'xsendkey Enter' \; command-prompt 'kill-session -t %1' 
-
-# fast session switching; type in name of session
-bind S command-prompt "switch -t %1"
 
 #select panes; changed for colemak (n normally moves to next window; i shows info already in status bar)
 bind h select-pane -L
