--- a/common/.pentadactylrc
+++ b/common/.pentadactylrc
@@ -1,6 +1,6 @@
 " todo : 
 " fix caret/visual mode bindings (hnei)
-" reply on yt and google text boxes broken; not that can't hint open some popup boxes.. some don't even work with the mouse
+" reply on yt and google text boxes broken; not that can't hint open some popup boxes.. some don't even work with the mouse (requires unblocking of 3rd party cookies or something for youtube.com)
 " gmail beeping
 " better tab navigation
 " fucking bookmark folders
@@ -13,6 +13,89 @@
 
 " downloads here; then with ranger..
 cd ~/Move
+
+" Experimentation (straight from vimrc; replace nnoremap)
+" all window management with "r" and "s"
+	" wm experementation"{{{
+
+	" "r" is redraw"{{{
+	" worskpace/Destkop switch"{{{
+	nnoremap <silent> ra :silent !bspc desktop -f ^1<cr><esc>
+	nnoremap <silent> rr :silent !bspc desktop -f ^2<cr><esc>
+	nnoremap <silent> rs :silent !bspc desktop -f ^3<cr><esc>
+	nnoremap <silent> rt :silent !bspc desktop -f ^4<cr><esc>
+	nnoremap <silent> rd :silent !bspc desktop -f ^5<cr><esc>
+	nnoremap <silent> rh :silent !bspc desktop -f ^6<cr><esc>
+	nnoremap <silent> rn :silent !bspc desktop -f ^7<cr><esc>
+	nnoremap <silent> re :silent !bspc desktop -f ^8<cr><esc>
+	nnoremap <silent> ri :silent !bspc desktop -f ^9<cr><esc>
+	nnoremap <silent> ro :silent !bspc desktop -f ^10<cr><esc>
+	"}}}
+	" move to destkop"{{{
+	nnoremap <silent> Ra :silent !bspc window -d ^1<cr><esc>
+	nnoremap <silent> Rr :silent !bspc window -d ^2<cr><esc>
+	nnoremap <silent> Rs :silent !bspc window -d ^3<cr><esc>
+	nnoremap <silent> Rt :silent !bspc window -d ^4<cr><esc>
+	nnoremap <silent> Rd :silent !bspc window -d ^5<cr><esc>
+	nnoremap <silent> Rh :silent !bspc window -d ^6<cr><esc>
+	nnoremap <silent> Rn :silent !bspc window -d ^7<cr><esc>
+	nnoremap <silent> Re :silent !bspc window -d ^8<cr><esc>
+	nnoremap <silent> Ri :silent !bspc window -d ^9<cr><esc>
+	nnoremap <silent> Ro :silent !bspc window -d ^10<cr>
+	"}}}
+
+	" moving windows within desktop"{{{
+	" move to biggest
+	nnoremap <silent> rcm :silent !bspc window -s biggest<cr>
+	" directions
+	nnoremap <silent> rch :silent !bspc window -s left<cr>
+	nnoremap <silent> rcn :silent !bspc window -s down<cr>
+	nnoremap <silent> rce :silent !bspc window -s up<cr>
+	nnoremap <silent> rci :silent !bspc window -s right<cr>
+	" circulate 
+	nnoremap <silent> r. :silent !bspc desktop -C forward<cr>
+	nnoremap <silent> r, :silent !bspc desktop -C backward<cr>
+	"}}}
+
+	"resize"{{{
+	nnoremap <silent> rmh :silent !~/bin/less_wm/resize_left.sh<cr>
+	nnoremap <silent> rmn :silent !~/bin/less_wm/resize_down.sh<cr>
+	nnoremap <silent> rme :silent !~/bin/less_wm/resize_up.sh<cr>
+	nnoremap <silent> rmi :silent !~/bin/less_wm/resize_right.sh<cr>
+	"}}}
+	" open urxvt
+	nnoremap <silent> ru :silent !urxvt &<cr>
+
+	"}}}
+
+	" s becomes select/Show/settings"{{{
+	"select
+	nnoremap <silent> sh :!bspc window -f left<cr><esc>
+	nnoremap <silent> sn :!bspc window -f down<cr><esc>
+	nnoremap <silent> se :!bspc window -f up<cr><esc>
+	nnoremap <silent> si :!bspc window -f right<cr><esc>
+	nnoremap <silent> sl :silent !bspc window -f last<cr><esc>
+
+	" monocle toggle
+	nnoremap <silent> st :silent !bspc desktop -l next<cr>
+	nnoremap <silent> ss :!bspc window -t sticky<cr><esc>
+	nnoremap <silent> sf :silent !bspc window -t fullscreen<cr>
+
+	" gap up and down
+	nnoremap <silent> su :silent !bspc config -d focused window_gap $((`bspc config -d focused window_gap` - 4 ))<cr>
+	nnoremap <silent> sd :silent !bspc config -d focused window_gap $((`bspc config -d focused window_gap` + 4 ))<cr>
+
+	" preselect"{{{
+	nnoremap <silent> sph :silent !bspc window -p left<cr>
+	nnoremap <silent> spn :silent !bspc window -p down<cr>
+	nnoremap <silent> spe :silent !bspc window -p up<cr>
+	nnoremap <silent> spi :silent !bspc window -p right<cr>
+	nnoremap <silent> spx :silent !bspc window -p cancel<cr>
+	nnoremap <silent> spd :silent !bspc desktop -c<cr>
+	"}}}
+	"}}}
+
+	"}}}
 
 " some ideas and settings from below: {{{
 " https://github.com/mashiro/dot-files/blob/master/.vimperatorrc
@@ -75,8 +158,9 @@ silent qmark a https://www.bbs.archlinux.org/
 silent qmark e https://www.exitpath-levelmakers.forumotion.com/
 silent qmark f http://www.4chan.org/
 silent qmark F http://www.fakku.net/
-silent qmark g https://www.geekhack.org/
-silent qmark G https://www.github.com/
+silent qmark g http://www.geekhack.org/
+" silent qmark G https://www.github.com/
+silent qmark G http://www.gelbooru.coom
 silent qmark h http://news.ycombinator.com/news
 silent qmark l http://www.last.fm/
 silent qmark L http://www.lifehacker.com/
@@ -132,7 +216,7 @@ set verbose=1
 " store command line history
 set history=1000
 
-" moderate change of focus; despotic; maybe fixes yt thing
+" moderate change of focus; despotic; 
 set strictfocus='chrome:*':laissez-faire,*:despotic
 
 " Set the default motor search
@@ -257,6 +341,10 @@ map -builtin : ;
 "swap m and M?
 " probably will never use marking on a website.. use quickmarks but don't ever add ne; worse to accidentally hit if messes up quickmarks so will leave as is
 
+" swap h and H 
+nmap -builtin h H
+nmap -builtin H h 
+
 " control backspace behaviour (this is caps w/cedilla>
 imap -builtin ¸ <c-w>
 cmap -builtin ¸ <c-w>
@@ -268,8 +356,11 @@ map t <leader>
 nmap -builtin O o
 nmap -builtin o t
 " usually don't open in newtab so lowecase for just open url
-nmap -builtin s O
-nmap -builtin S T
+" nmap -builtin s O
+" nmap -builtin S T
+nmap -builtin c O
+nmap -builtin C T
+
 
 " space and then comma as "secondary leaders"
 " space for tab switching
@@ -285,6 +376,29 @@ nmap <space>e 8gt
 nmap <space>i 9gt
 nmap <space>o 10gt
 
+" temporary solution until context aware:"{{{
+nmap <space>wa 11gt
+nmap <space>wr 12gt
+nmap <space>ws 13gt
+nmap <space>wt 14gt
+nmap <space>wd 15gt
+nmap <space>wh 16gt
+nmap <space>wn 17gt
+nmap <space>we 18gt
+nmap <space>wi 19gt
+nmap <space>wo 20gt
+
+nmap <space>fa 21gt
+nmap <space>fr 22gt
+nmap <space>fs 23gt
+nmap <space>ft 24gt
+nmap <space>fd 25gt
+nmap <space>fh 26gt
+nmap <space>fn 27gt
+nmap <space>fe 28gt
+nmap <space>fi 29gt
+nmap <space>fo 30gt
+"}}}
 " swap d/D; move left when closing tab (see below for d mapping)
 " nmap -builtin D d
 
@@ -293,6 +407,7 @@ nmap <space>o 10gt
 " swap p/P (so now p will open url from clipboard in new tab/buffer)
 nmap -builtin p P
 nmap -builtin P p
+imap .cl <c-v><c-v>
 
 " yank to sytem clipboard
 vmap -builtin y "+y
@@ -322,13 +437,15 @@ nmap -builtin zZ zz
 " }}}
 
 " GOTOs {{{
-" by default, gn, gg, gb, gi, go, gp, gf, gh, gt, gu taken
+" by default, gn, gg, gb, gi, go, gP, gf, gh, gt, gu taken
 " gf- source F (with editor); gh homepage; gi- last used input field; gn- quickmark in newtab; gu parent directory; go jump to quickmark; gP open url from clipboard in background buffer
 " gu parent directory; gU root
 nmap -builtin ge t gmail.com<cr>
 nmap -builtin gE o gmail.com<cr>
 "" open addons manager
 nmap -builtin ga :dialog addons<CR>
+" enter insert and paste
+nmap -builtin gp gi<c-v><c-v>
 
 " viewsource in new tab instead of in current
 " nmap -builtin gf :tab viewsource<CR>
@@ -398,7 +515,7 @@ nmap -builtin <space>U :!sh ~/bin/to_win.sh<cr>
 
 " when close a buffer, delete the corresponding link if it exists
 " got working
-nmap -builtin d -s <yank-location>:to delete<cr>D
+nmap -builtin <silent> d -s <yank-location>:silent to delete<cr>D
 " close buffer without deleting corresponding link with D (also move right... so fix at some point)
 
 
@@ -407,8 +524,8 @@ nmap -builtin d -s <yank-location>:to delete<cr>D
 " Better Ranger Integration:"{{{ 
 
 " pass file location to ranger command
-" don't need a <cr>; silent so that doesn't steal focus
-au DownloadPost * :!~/bin/ranger_browser_fm.sh "<file>"
+" don't need a <cr>; silent so that doesn't steal focus" 
+" au DownloadPost * :silent !~/bin/ranger_browser_fm.sh "<file>"
 " au DownloadPost * :!echo " <file> " | sed 's/\ //g'
 
 " :!bspwm -r
