--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -24,8 +24,8 @@ set -g prefix `
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # set window and pane index to 1 (0 by default); 0 ftw
-# set-option -g base-index 1
-# setw -g pane-base-index 1
+set-option -g base-index 1
+setw -g pane-base-index 1
 
 # Nested Tmux Session
 # send prefix key to tmux session within another tmux session or app
@@ -171,6 +171,7 @@ bind-key x kill-pane
 #}}}
 #========== Keybindings {{{
 # for colemak and other remaps as always
+# pretty much just using in program bindings instead of prefix key now
 
 # session# {{{
 # $ is rename
@@ -392,6 +393,7 @@ bind-key M \
 #}}}
 #========== Predefined Layouts {{{
 #-------------------------------------------------
+
 # This is l from gotbletu
 # demo video: http://www.youtube.com/watch?v=sxw-n5Du600
 # http://amjith.blogspot.com/2011/08/scripting-tmux-layouts.html
