--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -24,8 +24,8 @@ set -g prefix `
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # set window and pane index to 1 (0 by default); 0 ftw
-set-option -g base-index 1
-setw -g pane-base-index 1
+set -g base-index 1
+set -g pane-base-index 1
 
 # Nested Tmux Session
 # send prefix key to tmux session within another tmux session or app
