--- a/common/.config/ranger/rc.conf
+++ b/common/.config/ranger/rc.conf
@@ -58,67 +58,69 @@ map tf shell xdotool key control+shift+x
 # remove <cr>
 # change comment char to #
 # change shell binding
+# change to quickshell (sourcing zshrc is slow)
+# add -s
 # tmux experimentation#{{{
 # #r# is redraw#{{{
 # window switching#{{{
-map ra shell tmux select-window -t 1
-map rr shell tmux select-window -t 2
-map rs shell tmux select-window -t 3
-map rt shell tmux select-window -t 4
-map rd shell tmux select-window -t 5
-map rh shell tmux select-window -t 6
-map rn shell tmux select-window -t 7
-map re shell tmux select-window -t 8
-map ri shell tmux select-window -t 9
-map ro shell tmux select-window -t 10
+map ra quickshell -s tmux select-window -t 1
+map rr quickshell -s tmux select-window -t 2
+map rs quickshell -s tmux select-window -t 3
+map rt quickshell -s tmux select-window -t 4
+map rd quickshell -s tmux select-window -t 5
+map rh quickshell -s tmux select-window -t 6
+map rn quickshell -s tmux select-window -t 7
+map re quickshell -s tmux select-window -t 8
+map ri quickshell -s tmux select-window -t 9
+map ro quickshell -s tmux select-window -t 10
 #}}}
 # resize panes#{{{
-map rmh shell tmux resize-pane -L 10
-map rmn shell tmux resize-pane -D 10
-map rme shell tmux resize-pane -U 10
-map rmi shell tmux resize-pane -R 10
+map rmh quickshell -s tmux resize-pane -L 10
+map rmn quickshell -s tmux resize-pane -D 10
+map rme quickshell -s tmux resize-pane -U 10
+map rmi quickshell -s tmux resize-pane -R 10
 #}}}
 # circulate
 # previous
-map r, shell tmux swap-pane -U
+map r, quickshell -s tmux swap-pane -U
 # next
-map r. shell tmux swap-pane -D
+map r. quickshell -s tmux swap-pane -D
 
 # new session
-map r_ shell tmux new-session
+map r_ quickshell -s tmux new-session
 
 # new window 
-map rc shell tmux new-window
+map rc quickshell -s tmux new-window
 # kill pane
-map rx shell tmux kill-pane
+map rx quickshell -s tmux kill-pane
 # last window 
-map rl shell tmux last-window
+map rl quickshell -s tmux last-window
 # split windows
-map r/ shell tmux split-window -h
-map r- shell tmux split-window
+map r/ quickshell -s tmux split-window -h
+map r- quickshell -s tmux split-window
 
 # break pane
-map r! shell tmux break-pane
+map r! quickshell -s tmux break-pane
 #}}}
 
 # #s# is select#{{{
 # panes#{{{
 # directions
-map sh shell tmux select-pane -L
-map sn shell tmux select-pane -D
-map se shell tmux select-pane -U
-map si shell tmux select-pane -R
+map sh quickshell -s tmux select-pane -L
+map sn quickshell -s tmux select-pane -D
+map se quickshell -s tmux select-pane -U
+map si quickshell -s tmux select-pane -R
 # last
-map sl shell tmux select-pane -l
+map sl quickshell -s tmux select-pane -l
 # select layout
-map sv shell tmux select-layout main-vertical
+map sv quickshell -s tmux select-layout main-vertical
 
 # toggle #monocle# (zoom)
-map st shell tmux resize-pane -Z
+map st quickshell -s tmux resize-pane -Z
 #}}}
 
 # select session
-map ss shell tmux choose-client
+map ss quickshell -s tmux choose-client
 #}}}
 #}}}
  
