--- a/common/.mpv/input.conf
+++ b/common/.mpv/input.conf
@@ -1,4 +1,4 @@
-# mpv input control file
+# mpv input control file# {{{
 #
 # You are able to redefine default keyboard/joystick/mouse/LIRC bindings, or
 # add new ones here.
@@ -41,7 +41,7 @@
 
 # If this is enabled, treat all the following bindings as default.
 #default-bindings start
-
+# }}}
 
 # My Rebinds {{{
 n seek -5
@@ -52,6 +52,7 @@ i seek 15
 
 N add volume -1
 E add volume 1
+
 # }}}
 
 #MOUSE_BTN0 ignore # don't do anything
