--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -9,10 +9,6 @@
 # bind-key S confirm kill-server
 # visual-bell ; bell-action ; visual-content
  
-# to implement a mode.. would have to set every key to repeat.. and then binding to change repeat time.. or something convulted with resending prefix
-# bind -n M-k set-option repeat-time 10000 
-# look at this: https://github.com/mtl/tmux-modality
-
 #========== General Settings {{{
 #------------------------------------------------------
 #change prefix key
@@ -56,7 +52,8 @@ set-option -sg escape-time 0
 #========== Appearance {{{
 #-------------------------------------------------
 # 256 colour
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-bce"
 
 #========== Pane Colours {{{
 # pane divider color; non active panes can change color
@@ -79,19 +76,7 @@ set-option -g pane-active-border-fg blue
 set-option -g status-utf8 on
 
 # refresh the status bar faster
-set-option -g status-interval 2
-
-# battery stuff (old):
-# set -g status-right "#(battery Discharging)" with this script in path: 
-# https://github.com/richoH/dotfiles/blob/master/bin/battery
-# https://github.com/AaronLasseigne/tmux_battery_charge_indicator/blob/master/tmux_battery_charge_indicator.sh
-
-# positioning: 
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-# position the status bar at top of screen:
-# set-option -g status-position top    
+set-option -g status-interval 1
 
 # visual notification of activity in other windows (just gives useless messages if on?)
 setw -g monitor-activity off
@@ -101,46 +86,9 @@ set -g visual-activity off
 # if this is too distracting. (I lowerered from 4k)
 set-option -g display-time 1000
 
-# Just using terminal colours; specific colours not working for me
-set-option -g message-fg '#67FDFA'
-set-option -g message-bg '#222222'
-set-option -g message-attr dim
 #}}}
-#===== Center {{{ 
-# statusbar colors
-set-option -g status-fg cyan
-set-option -g status-bg black
-set-option -g status-attr default
 
-# window title colors; non active
-set-window-option -g window-status-fg cyan
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# window title colors; active
-set-window-option -g window-status-current-fg white	#font
-set-window-option -g window-status-current-bg red	#boarder
-set-window-option -g window-status-current-attr bright
-
-#}}}
-#===== Left Side {{{
-set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
-
-# old bar:
-#set-option -g status-left "#[fg=cyan]Session: #S #[fg=yellow]#I #[fg=red]#P"
-
-#}}}
-#===== Right Side {{{
-# use "man date" to set the clock to your liking
-#hostname time date
-# need to use bright for rainbarf; don't use rgb
-set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
-
-#old stuff:
-#set-option -g status-right "#[fg=blue] #(/home/angelic_sedition/tmux_battery_charge_indicator.sh) |Meow #[fg=cyan]%a %D %l:%M:%p %Z"
-#set-option -g status-right '#(rainbarf --nobattery --noremaining --bright --tmux --order=fwaic --width=25)'
-
-#}}}
+source ~/tmuxline
 #}}}
 #}}}
 #========== Window / Pane Settings {{{
