added script to make gifs in mpv

--- a/common/.mpv/input.conf
+++ b/common/.mpv/input.conf
@@ -53,6 +53,13 @@ i seek 15
 N add volume -1
 E add volume 1
 
+# start timing for gif 
+o run /home/angelic_sedition/bin/mpv/mpv_gif.sh 1 ${time-pos} ${path}
+# end time for gif
+O run /home/angelic_sedition/bin/mpv/mpv_gif.sh 2 ${time-pos}
+# testing
+a run /home/angelic_sedition/bin/mpv/mpv_gif2.sh ${height} ${width} ${border}
+
 # }}}
 
 #MOUSE_BTN0 ignore # don't do anything
